--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     <div class="text-center mb-4 fade-in">
         <h1 class="display-5 fw-bold text-primary">Multi-Robot Task Cooperation (MRTC) Demo</h1>
         <p class="text-muted">Efficient coordination of Unmanned Sanitation Vehicles (USVs) for urban cleaning.</p>
+        <a href="https://anonymous.4open.science/r/MRTC-3702" class="btn btn-primary" target="_blank">
+        <i class="fab fa-github"></i> View Code on GitHub
+    </a>
     </div>
 
     <!--    <div class="section fade-in">-->
@@ -178,7 +181,7 @@
 
 
     <div class="footer mt-5 fade-in">
-        <!--        <p>&copy; 2025 MRTC Research Team. All Rights Reserved.</p>-->
+
     </div>
 </div>
 
