--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h1 class="display-5 fw-bold text-primary">Multi-Robot Task Cooperation (MRTC) Demo</h1>
         <p class="text-muted">Efficient coordination of Unmanned Sanitation Vehicles (USVs) for urban cleaning.</p>
         <a href="https://anonymous.4open.science/r/MRTC-3702" class="btn btn-primary" target="_blank">
-        <i class="fab fa-github"></i> View Code on GitHub
+        <i class="fab fa-github"></i> View Code on anonymous repository
     </a>
     </div>
 
