--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
     <!-- ========================== FOOTER ========================== -->
     <footer data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
-        Built with <i class="fas fa-heart mx-1"></i> XXX Team · <a href="#abstract">Back to top</a>
+        Built with XXX Team · <a href="#abstract">Back to top</a>
     </footer>
 
     <!-- ========================== SCRIPTS ========================== -->
