--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
 <!--    <h1 class="fw-bold mb-2" style="color: #000;">MRTC: Multi-Robot Task Cooperation -->
 <!--        for Urban Unmanned Sanitation Vehicles</h1>-->
         <h1 class="fw-bold mb-2" style="color: #000;">
-  MRTC: Multi-Robot Task Cooperation<br/>
-  for Urban Unmanned Sanitation Vehicles
+<!--  MRTC: Multi-Robot Task Cooperation<br/>-->
+<!--  for Urban Unmanned Sanitation Vehicles-->
+            Demo: Task Cooperation for Urban Unmanned Sanitation Vehicles
 </h1>
 
     <p class="lead" style="color: #000;">Efficient coordination of USVs for large-scale urban cleaning.</p>
